# pen31ope

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  INSTALL.md  LICENSE  TOPICS.md  main.cpp
CMakeMods/: FindLua.cmake  FindSDL2.cmake  FindSDL2_Image.cmake  FindSDL2_ttf.cmake
Common/: Chrono.cpp  Chrono.hpp  Color.hpp  Constants.hpp  Logger.hpp  Util.hpp  global.hpp
Core/: BarycentricTriangleRasterizer.hpp  BresenhamsLineRasterizer.hpp  ILineRasterizer.hpp  IRenderer.cpp  IRenderer.hpp  ITriangleRasterizer.hpp  LerpLineRasterizer.hpp  LerpTriangleRasterizer.hpp  Rasterizer.hpp  SDLCommon.hpp  SDLRenderer.cpp  SDLRenderer.hpp  SDLTextFactory.cpp  SDLTextFactory.hpp
Geometry/: Box.hpp  IOBJParser.hpp  ITextureLoader.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  SDLTextureLoader.cpp  SDLTextureLoader.hpp  Texture.hpp  Triangle.hpp
Lua/: LuaCommon.hpp  LuaContext.cpp  LuaContext.hpp
Math/: Interpolate.hpp  LuaVector.hpp  MathUtil.hpp  Matrix.cpp  Matrix.hpp  Vector.hpp  Vector3.cpp  Vector3.hpp
Scene/: Camera.cpp  Camera.hpp  ICameraFactory.hpp  IObject3DFactory.hpp  LuaCameraFactory.cpp  LuaCameraFactory.hpp  LuaObject3DFactory.cpp  LuaObject3DFactory.hpp  Object3D.cpp  Object3D.hpp  Object3DFactory.cpp  Object3DFactory.hpp
Settings/: AppSettings.hpp  IAppSettingsFactory.hpp  LuaAppSettingsFactory.cpp  LuaAppSettingsFactory.hpp
scripts/: scene.lua  settings.lua
